syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.sebastianDev";
option java_outer_classname = "ReservationGrpcProto";

package reservation;

import "google/protobuf/timestamp.proto";

// =======================================
// Servi√ßo gRPC
// =======================================
service ReservationService {
  rpc CreateReservation(CreateReservationRequest) returns (ReservationResponse);
}

// =======================================
// Mensagens de Request e Response
// =======================================
message CreateReservationRequest {
  string room_id = 1;
  string user_id = 2;
  string booking_id = 3;
  google.protobuf.Timestamp check_in_date = 4;
  google.protobuf.Timestamp check_out_date = 5;
}

message ReservationResponse {
  string booking_id = 1;
  string status = 2;
}
